--- a/index.html
+++ b/index.html
@@ -15,23 +15,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="#">Learn More</a>
-								<ul>
-									<li><a href="results.html">Results</a></li>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
+							<li><a href="results.html">Results</a></li>
 							<li><a href="programs.html">Programs</a></li>
 						</ul>
 					</nav>
@@ -41,9 +25,9 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h1><img src="images/logo.png" alt="Konstant Grind" width="440px"/></h1>
+							<h1><img src="images/logo.png" alt="Konstant Grind"/></h1>
 							<h2>Personal Training</h2>
-							<a id="signUpButton" href="#" class="button primary">Book Now</a>
+							<a id="signUpButton" href="#form" class="button primary">Book Now</a>
 						</header>
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 					</div>
@@ -63,11 +47,11 @@
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-									Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-									nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-									augue varius tempus lobortis porttitor accumsan consequat
-									adipiscing lorem dolor.</p>
+									<p>My years of knowledge in fitness and nutrition has 
+									transformed hundreds of lives. With personalized nutrition 
+									mathods and workout routines for both me and women, this is 
+									more than simple body toning. My coaching and training programs 
+									are life changing!</p>
 								</div>
 								<div class="col-4 col-12-medium">
 									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
@@ -90,90 +74,87 @@
 							<h2>Success Stories</h2>
 							<p>Real people. Real results.</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<p>See the transformations and results of previous clients and here their testimonials. Get inspired by the progress and dedication of others. See what personalized coaching can do to help you!</p>
 						<ul class="actions">
 							<li><a href="results.html" class="button">Learn More</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
 				</section>
-
+			
 			<!-- Three -->
-				<section id="three" class="spotlight style2 right">
-					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
-					<div class="content">
-						<header>
-							<h2>Interdum felis blandit praesent sed augue</h2>
-							<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
-						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
-						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
-					</div>
-					<a href="#four" class="goto-next scrolly">Next</a>
-				</section>
-
-			<!-- Four -->
-				<section id="four" class="wrapper style1 special fade-up">
+				<section id="three" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
-							<h2>Accumsan sed tempus adipiscing blandit</h2>
-							<p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
+							<h2>Programs and Plans</h2>
+							<p>Plans for everything you need to become your healthiest self.</p>
 						</header>
 						<div class="box alt">
 							<div class="row gtr-uniform">
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-chart-area"></span>
-									<h3>Ipsum sed commodo</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Weight Loss</h3>
+									<p>Lose weight and get lean with a customized fat loss workout.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-comment"></span>
-									<h3>Eleifend lorem ornare</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Muscle Tone</h3>
+									<p>Achieve a more well defined, sculpted body with dietary advice and a fitness plan.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-flask"></span>
-									<h3>Cubilia cep lobortis</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Posture Correction</h3>
+									<p>Fix your back and neck pain with exercises to stretch out your spine and correct your posture.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-paper-plane"></span>
-									<h3>Non semper interdum</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Cardio Fitness</h3>
+									<p>Flourish in your body with a routine designed to improve cardiovascular health.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-file"></span>
-									<h3>Odio laoreet accumsan</h3>
+									<h3>Other Services</h3>
 									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-lock"></span>
-									<h3>Massa arcu accumsan</h3>
+									<h3>Other Services</h3>
 									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
 								</section>
 							</div>
 						</div>
 						<footer class="major">
 							<ul class="actions special">
-								<li><a href="#" class="button">Magna sed feugiat</a></li>
+								<li><a href="programs.html" class="button">Learn More</a></li>
 							</ul>
 						</footer>
 					</div>
 				</section>
 
-			<!-- Five -->
-				<section id="five" class="wrapper style2 special fade">
+			<!-- Form -->
+				<section id="form" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
-							<h2>Free Workouts and Hot Tips</h2>
-							<p>Sign up for the Konstant Grind newsletter to receive free workouts and other healthy tips.</p>
+							<h2>Sign up for personalized coaching sessions now!</h2>
+							<p>Fill out this quick form to get started.</p>
 						</header>
-						<form method="post" action="#" class="cta">
-							<div class="row gtr-uniform gtr-50">
-								<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
-								<div class="col-4 col-12-xsmall"><input type="submit" value="Subscribe" class="fit primary" /></div>
+						<form method="post" action="mailto:lordlevi2001@gmail.com" class="cta">
+							<div class="row gtr-uniform gtr-50 flex-center">
+								<div class="col-12">
+									<input type="text" name="name" id="name" value="" placeholder="Name" required/>
+								</div>
+								<div class="col-12">
+									<input type="email" name="email" id="email" value="" placeholder="Email" required/>
+								</div>
+								<div class="col-12">
+									<input type="text" name="phone" id="phone" pattern="[0-9]{10}" value="" placeholder="Phone Number" required/>
+								</div>
+								<div class="col-12">
+									<textarea name="message" id="message" placeholder="Comments (Optional)" rows="3"></textarea>
+								</div>
+								<div class="col-4 col-12-xsmall">
+									<input type="submit" value="Book Now" class="fit primary" />
+								</div>
 							</div>
 						</form>
 					</div>
@@ -181,14 +162,6 @@
 
 			<!-- Footer -->
 				<footer id="footer">
-					<ul class="icons">
-						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
 					<ul class="copyright">
 						<li>&copy; Konstant Grind. All rights reserved.</li>
 					</ul>
@@ -199,8 +172,8 @@
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.dropotron.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
