--- a/index.html
+++ b/index.html
@@ -54,11 +54,10 @@
 									are life changing!</p>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-									ipsum dolor nullam.</p>
+									<p>I am a Certified Personal Trainer with the International
+									Sports Sciences Association with a passion for helping people to
+									cultivate long-term health and wellness. I have the knowledge and
+									experience to help you achieve the results that you want.</p>
 								</div>
 							</div>
 						</div>
@@ -92,34 +91,34 @@
 						<div class="box alt">
 							<div class="row gtr-uniform">
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-chart-area"></span>
+									<span class="icon solid alt major fa-weight"></span>
 									<h3>Weight Loss</h3>
 									<p>Lose weight and get lean with a customized fat loss workout.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-comment"></span>
+									<span class="icon solid alt major fa-fist-raised"></span>
 									<h3>Muscle Tone</h3>
 									<p>Achieve a more well defined, sculpted body with dietary advice and a fitness plan.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-flask"></span>
+									<span class="icon solid alt major fa-user-tie"></span>
 									<h3>Posture Correction</h3>
 									<p>Fix your back and neck pain with exercises to stretch out your spine and correct your posture.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-paper-plane"></span>
+									<span class="icon solid alt major fa-running"></span>
 									<h3>Cardio Fitness</h3>
 									<p>Flourish in your body with a routine designed to improve cardiovascular health.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-file"></span>
-									<h3>Other Services</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<span class="icon solid alt major fa-dumbbell"></span>
+									<h3>Strength Training</h3>
+									<p>Maximize your gains, build strength, and feel powerful in whatever you do.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-lock"></span>
-									<h3>Other Services</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<span class="icon solid alt major fa-home"></span>
+									<h3>Mobile Services</h3>
+									<p>Get coaching services without walking past your doorstep with mobile services.</p>
 								</section>
 							</div>
 						</div>
@@ -136,27 +135,12 @@
 					<div class="container">
 						<header>
 							<h2>Sign up for personalized coaching sessions now!</h2>
-							<p>Fill out this quick form to get started.</p>
+							<p>Contact me with the information below to get started.</p>
 						</header>
-						<form method="post" action="mailto:lordlevi2001@gmail.com" class="cta">
-							<div class="row gtr-uniform gtr-50 flex-center">
-								<div class="col-12">
-									<input type="text" name="name" id="name" value="" placeholder="Name" required/>
-								</div>
-								<div class="col-12">
-									<input type="email" name="email" id="email" value="" placeholder="Email" required/>
-								</div>
-								<div class="col-12">
-									<input type="text" name="phone" id="phone" pattern="[0-9]{10}" value="" placeholder="Phone Number" required/>
-								</div>
-								<div class="col-12">
-									<textarea name="message" id="message" placeholder="Comments (Optional)" rows="3"></textarea>
-								</div>
-								<div class="col-4 col-12-xsmall">
-									<input type="submit" value="Book Now" class="fit primary" />
-								</div>
-							</div>
-						</form>
+						<p class="margin small">Konstantinos Roditis</p>
+						<p class="margin small">(209) 303-9938</p>
+						<p class="margin small">nickiskonstantinos@gmail.com</p>
+						<p class="margin small">Turlock, CA 95382</p>
 					</div>
 				</section>
 
