--- a/programs.html
+++ b/programs.html
@@ -35,19 +35,21 @@
 
 								<!-- Content -->
 									<section id="content">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+										<span class="image fit"><img src="images/pic07.jpg" alt="" /></span>
 										<h3>Weight Loss</h3>
-										<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
-										<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique.</p>
+										<p>Want to burn belly fat, beat cravings, and feel great? I'll help you develop a diet 
+											with food that you both enjoy and helps to slim. Book today to have a trainer that 
+											will motivate you, keep you accountable, and design workouts to target YOUR fat.</p>
 										<hr />
-										<h3>Muscle Growth</h3>
-										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus.</p>
+										<h3>Personalized Sessions</h3>
+										<p>You are special with your own talents, history, and needs. 
+											Don't settle for a one size fits all approach to your health. 
+											Let's develop a program that is the right fit JUST for you.</p>
 										<ul>
-											<li>Faucibus orci lobortis ac adipiscing integer.</li>
-											<li>Col accumsan arcu mi aliquet placerat.</li>
-											<li>Lobortis vestibulum ut magna tempor massa nascetur.</li>
-											<li>Blandit massa non blandit tempor interdum.</li>
-											<li>Lacinia mattis arcu nascetur lobortis.</li>
+											<li>Mobile Training sessions to easily fit training at home into your busy schedule.</li>
+											<li>Private gym access for distraction-free coaching and advanced equipment.</li>
+											<li>Meal planning advice and guides to fit your personal nutrition needs.</li>
+											<li>Workouts built with your goals in mind so you can feel happy with your body.</li>
 										</ul>
 									</section>
 
@@ -58,13 +60,21 @@
 									<section id="sidebar">
 										<section>
 											<h3>Well-being and Health</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
+											<p>Konstant Grind training is all about your improvement, so you can be assured 
+												that your personalized program will be optimized to best establish your health. 
+												Fitness and nutrition will help you maintain a healthy weight and improve your 
+												ability to combat health conditions and diseases. Physical training will help 
+												improve your mood, boost your energy, and promote better sleep. Feel like your 
+												best self, today!</p>
 										</section>
 										<hr />
 										<section>
-											<a href="#" class="image fit"><img src="images/pic08.jpg" alt="" /></a>
-											<h3>Personalized Sessions</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+											<span class="image fit"><img src="images/pic08.jpg" alt="" /></span>
+											<h3>Muscle Growth</h3>
+											<p>Develop a chiseled powerful body with a routine developed to grow your muscles. 
+												Our coaching sessions are made to target your prefered muscles so you can feel 
+												confident in the body you developed. From big chest to muscular glutes, we'll 
+												make the perfect plan to fit your needs.</p>
 										</section>
 									</section>
 
