--- a/results.html
+++ b/results.html
@@ -31,13 +31,14 @@
 						</header>
 
 						<!-- Planning TEMPORARY -->
-						<div>
-							<img>
+						<section class="">
+							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 							<p>
 								I grew a lot from this. I'd recommend Konstant Grind. Blah Blah
 							</p>
 							<!-- Add a tweet?? Repeat 2-3 People -->
-						</div>
+						</section>
+						<hr />
 
 						<!-- Text -->
 						<section>
