--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 								<div class="col-4 col-12-medium">
 									<p>My years of knowledge in fitness and nutrition has 
 									transformed hundreds of lives. With personalized nutrition 
-									methods and workout routines for both me and women, this is 
+									methods and workout routines for both men and women, this is 
 									more than simple body toning. My coaching and training programs 
 									are life changing!</p>
 								</div>
