Updated some testimonials

--- a/results.html
+++ b/results.html
@@ -33,8 +33,8 @@
 						<section class="testimonial">
 							<span class="image left"><img src="images/pic04.jpg" alt="" /></span>
 							<div>
-								<p>This is my testimonial.</p>
-								<p>-Mike Litteris</p>
+								<p>Nice!</p>
+								<p>-Layne Cornell</p>
 							</div>
 						</section>
 						<hr />
@@ -42,7 +42,7 @@
 							<span class="image left"><img src="images/pic05.jpg" alt="" /></span>
 							<div>
 								<p>I would highly recommend KonstantGrind training.</p>
-								<p>-Hugh Jassol</p>
+								<p>-LuLu Jameson</p>
 							</div>
 						</section>
 						<hr />
@@ -59,7 +59,7 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="copyright">
-						<li>&copy; Konstant Grind. All rights reserved.</li>
+						<li>Konstant Grind. Rights reserved.</li>
 					</ul>
 				</footer>
 
