--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 							<h2>Success Stories</h2>
 							<p>Real people. Real results.</p>
 						</header>
-						<p>See the transformations and results of previous clients and here their testimonials. Get inspired by the progress and dedication of others. See what personalized coaching can do to help you!</p>
+						<p>See the transformations and results of previous clients and hear their testimonials. Get inspired by the progress and dedication of others. See what personalized coaching can do to help you!</p>
 						<ul class="actions">
 							<li><a href="results.html" class="button">Learn More</a></li>
 						</ul>
