Add calendly link

--- a/index.html
+++ b/index.html
@@ -138,6 +138,12 @@
 							<h2>Sign up for personalized coaching sessions now!</h2>
 							<p>Contact me with the information below to get started.</p>
 						</header>
+							<!-- Calendly inline widget begin -->
+							<div class="calendly-inline-widget" data-url="https://calendly.com/konstantgrind" style="min-width:320px;height:630px;">
+							</div>
+							<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async>
+							</script>
+							<!-- Calendly inline widget end -->
 						<p class="margin small">Konstantinos Roditis</p>
 						<p class="margin small">(209) 303-9938</p>
 						<p class="margin small">nickiskonstantinos@gmail.com</p>
