--- a/results.html
+++ b/results.html
@@ -34,10 +34,11 @@
 						<section class="testimonial">
 							<span class="image left"><img src="images/pic04.jpg" alt="" /></span>
 							<div>
-								<p>Nice!</p>
+								<p>Nice. Highly Recommend!</p>
 								<p>-Layne Cornell</p>
 							</div>
 						</section>
+						<!--
 						<hr />
 						<section class="testimonial">
 							<span class="image left"><img src="images/pic05.jpg" alt="" /></span>
@@ -54,6 +55,7 @@
 								<p>-Anita Cox</p>
 							</div>
 						</section>
+						-->
 					</div>
 				</div>
 
