--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 							<p>Contact me with the information below to get started.</p>
 						</header>
 							<!-- Calendly inline widget begin -->
-							<div class="calendly-inline-widget" data-url="https://calendly.com/konstantgrind" style="min-width:320px; min-height:630px;">
+							<div class="calendly-inline-widget" data-url="https://calendly.com/konstantgrind" style="min-width:320px;height:630px;">
 							</div>
 							<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async>
 							</script>
