--- a/results.html
+++ b/results.html
@@ -30,23 +30,23 @@
 							<h2>Results</h2>
 							<p>Real testimonials from real people. Verifiable results.</p>
 						</header>
-
+						
 						<section class="testimonial">
 							<span class="image left"><img src="images/pic04.jpg" alt="" /></span>
+							<div>
+								<p>I have trusted Nick to help me continue my growth in becoming more fit and healthy! His encouragement, expertise and knowledge keeps me working hard and meeting new goals! I'm very grateful for his training!</p>
+								<p>-Placeholder</p>
+							</div>
+						</section>
+						<hr />
+						<section class="testimonial">
+							<span class="image left"><img src="images/pic05.jpg" alt="" /></span>
 							<div>
 								<p>Nice. Highly Recommend!</p>
 								<p>-Layne Cornell</p>
 							</div>
 						</section>
 						<!--
-						<hr />
-						<section class="testimonial">
-							<span class="image left"><img src="images/pic05.jpg" alt="" /></span>
-							<div>
-								<p>I would highly recommend KonstantGrind training.</p>
-								<p>-LuLu Jameson</p>
-							</div>
-						</section>
 						<hr />
 						<section class="testimonial">
 							<span class="image left"><img src="images/pic06.jpg" alt="" /></span>
