--- a/results.html
+++ b/results.html
@@ -42,7 +42,7 @@
 						<section class="testimonial">
 							<span class="image left"><img src="images/pic05.jpg" alt="" /></span>
 							<div>
-								<p>Nice. Highly Recommend!</p>
+								<p>Nick is an excellent trainer. He is very experienced and highly knowledgeable in a variety of exercises.</p>
 								<p>-Layne Cornell</p>
 							</div>
 						</section>
