--- a/results.html
+++ b/results.html
@@ -35,7 +35,7 @@
 							<span class="image left"><img src="images/pic04.jpg" alt="" /></span>
 							<div>
 								<p>I have trusted Nick to help me continue my growth in becoming more fit and healthy! His encouragement, expertise and knowledge keeps me working hard and meeting new goals! I'm very grateful for his training!</p>
-								<p>-Placeholder</p>
+								<p>-Lynette Poquette</p>
 							</div>
 						</section>
 						<hr />
