Results Page Visual Overhaul
Move picture 2 to the right side.

--- a/results.html
+++ b/results.html
@@ -41,7 +41,7 @@
 						</section>
 						<hr />
 						<section class="testimonial">
-							<span class="image left"><img src="images/pic05.jpg" alt="" /></span>
+							<span class="image right"><img src="images/pic05.jpg" alt="" /></span>
 							<div>
 								<p>Nick is an excellent trainer. He is very experienced and highly knowledgeable in a variety of exercises.</p>
 								<p>-Layne Cornell</p>
