--- a/results.html
+++ b/results.html
@@ -35,7 +35,7 @@
 						<section class="testimonial">
 							<span class="image left"><img src="images/pic04.jpg" alt="" /></span>
 							<div>
-								<p>I have trusted Nick to help me continue my growth in becoming more fit and healthy! His encouragement, expertise and knowledge keeps me working hard and meeting new goals! I'm very grateful for his training!</p>
+								<p class="testimony-p">I have trusted Nick to help me continue my growth in becoming more fit and healthy! His encouragement, expertise and knowledge keeps me working hard and meeting new goals! I'm very grateful for his training!</p>
 								<p>-Lynette Poquette</p>
 							</div>
 						</section>
@@ -43,7 +43,7 @@
 						<section class="testimonial">
 							<span class="image right"><img src="images/pic05.jpg" alt="" /></span>
 							<div>
-								<p>Nick is an excellent trainer. He is very experienced and highly knowledgeable in a variety of exercises.</p>
+								<p class="testimony-p">Nick is an excellent trainer. He is very experienced and highly knowledgeable in a variety of exercises.</p>
 								<p>-Layne Cornell</p>
 							</div>
 						</section>
@@ -52,7 +52,7 @@
 						<section class="testimonial">
 							<span class="image left"><img src="images/pic06.jpg" alt="" /></span>
 							<div>
-								<p>After training with coach Konstantinos I lost 20 lbs.</p>
+								<p class="testimony-p">After training with coach Konstantinos I lost 20 lbs.</p>
 								<p>-Anita Cox</p>
 							</div>
 						</section>
