Visual Overhaul Results Page

--- a/results.html
+++ b/results.html
@@ -36,16 +36,16 @@
 							<span class="image left"><img src="images/pic04.jpg" alt="" /></span>
 							<div>
 								<p class="testimony-p">I have trusted Nick to help me continue my growth in becoming more fit and healthy! His encouragement, expertise and knowledge keeps me working hard and meeting new goals! I'm very grateful for his training!</p>
-								<p>-Lynette Poquette</p>
+								<p class="testimony-n">-Lynette Poquette</p>
 							</div>
 						</section>
 						<hr />
 						<section class="testimonial">
-							<span class="image right"><img src="images/pic05.jpg" alt="" /></span>
 							<div>
 								<p class="testimony-p">Nick is an excellent trainer. He is very experienced and highly knowledgeable in a variety of exercises.</p>
-								<p>-Layne Cornell</p>
+								<p class="testimony-n">-Layne Cornell</p>
 							</div>
+							<span class="image right"><img src="images/pic05.jpg" alt="" /></span>
 						</section>
 						<!--
 						<hr />
@@ -53,7 +53,7 @@
 							<span class="image left"><img src="images/pic06.jpg" alt="" /></span>
 							<div>
 								<p class="testimony-p">After training with coach Konstantinos I lost 20 lbs.</p>
-								<p>-Anita Cox</p>
+								<p class="testimony-n">-Anita Cox</p>
 							</div>
 						</section>
 						-->
