--- a/results.html
+++ b/results.html
@@ -41,11 +41,11 @@
 						</section>
 						<hr />
 						<section class="testimonial">
+							<span class="image left"><img src="images/pic05.jpg" alt="" /></span>
 							<div>
 								<p class="testimony-p">Nick is an excellent trainer. He is very experienced and highly knowledgeable in a variety of exercises.</p>
 								<p class="testimony-n">-Layne Cornell</p>
 							</div>
-							<span class="image right"><img src="images/pic05.jpg" alt="" /></span>
 						</section>
 						<!--
 						<hr />
