--- a/results.html
+++ b/results.html
@@ -35,16 +35,16 @@
 						<section class="testimonial">
 							<span class="image left"><img src="images/pic04.jpg" alt="" /></span>
 							<div>
-								<p class="testimony-p">I have trusted Nick to help me continue my growth in becoming more fit and healthy! His encouragement, expertise and knowledge keeps me working hard and meeting new goals! I'm very grateful for his training!</p>
-								<p class="testimony-n">-Lynette Poquette</p>
+								<p>I have trusted Nick to help me continue my growth in becoming more fit and healthy! His encouragement, expertise and knowledge keeps me working hard and meeting new goals! I'm very grateful for his training!</p>
+								<p>-Lynette Poquette</p>
 							</div>
 						</section>
 						<hr />
 						<section class="testimonial">
 							<span class="image left"><img src="images/pic05.jpg" alt="" /></span>
 							<div>
-								<p class="testimony-p">Nick is an excellent trainer. He is very experienced and highly knowledgeable in a variety of exercises.</p>
-								<p class="testimony-n">-Layne Cornell</p>
+								<p>Nick is an excellent trainer. He is very experienced and highly knowledgeable in a variety of exercises.</p>
+								<p>-Layne Cornell</p>
 							</div>
 						</section>
 						<!--
