--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Konstant Grind</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="Personal Trainer & Fitness Coach. Custom nutrition and training programs for men and women. Book now!" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" type="image/png" href="images/favicon.png">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
